--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
-    "node-sass": "^4.6.0",
+    "node-sass": "4.12.0",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
     "react": "^16.1.0",
@@ -115,7 +115,6 @@
     "lint": "run-p eslint flow sass-lint",
     "start": "cross-env MODULES=false node server.js",
     "test": "cross-env NODE_ENV=test karma start karma.conf.js --single-run",
-    "prepublish": "test $(npm -v | tr . '\\n' | head -n 1) -ge '4' || exit 1",
     "prepare": "npm run build",
     "codecov": "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js",
     "prebuild": "rimraf es lib dist",
